--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="hero section" id="hero">
         <div class="hero__container grid">       
             <div class="hero__item">
-                <img class="hero__img" src="/assets/img/hero-photo.png" alt="hero-photo">
+                <img class="hero__img" src="/assets/img/hero-photo.svg" alt="hero-photo">
                 <div class="hero__slogan">
                     <h6 class="hero__title ani-left">WELCOME TO LAW FİRM</h1>
                     <p class="hero__description ani-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, est?</p>    
